--- a/web/index.html
+++ b/web/index.html
@@ -77,7 +77,7 @@
                     
                     </div>
                     <div class="btn pure-u-1-4">
-                        <label for=spanComp">Input Span Compression:</label>
+                        <label for="spanComp">Input Span Compression:</label>
                         <input type="checkbox" id="spanComp" name="spanComp" value="0" onclick="setButtonValue(this)">
                     </div>
 
