l'interface web possède un bouton pour choisir JC's version ou pas

--- a/web/index.html
+++ b/web/index.html
@@ -85,7 +85,12 @@
                         <label for="highZ">High-Z mode:</label>
                         <input type="checkbox" id="highZ" name="highZ" value="0" onclick="setButtonValue(this)">
                     </div>  
-               
+                    <div class="JCBUTTON">
+                        <label for="jcbutton">JC:</label>
+                        <!-- <input type="checkbox" id="jcButton" name="JCBUTTON" value="1" onclick="setButtonValue(this)"> -->
+                        <input type="checkbox" name="JCBUTTON" value="1" onclick="setButtonValue(this)" checked>
+                    </div>  
+            
             </div>
             <br>
             <div  class="btnBox" style="width:90%"> 
