mise en place du whichWelch

--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
     </style>
   </head>
 
-  <body onload="setupPage();checkComPorts()" >
+  <body onload="setupPage();checkComPorts();whichWelch()" >
   
     <audio id="play" src="medias/beep-08b.mp3"></audio>
 
